--- a/docker/docker-compose-airflow.yml
+++ b/docker/docker-compose-airflow.yml
@@ -12,6 +12,7 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_DW_DB=${POSTGRES_DW_DB}
       - POSTGRES_CONTAINER_NAME=${POSTGRES_CONTAINER_NAME}
       - POSTGRES_PORT=${POSTGRES_PORT}
       - SPARK_MASTER_HOST_NAME=${SPARK_MASTER_HOST_NAME}
@@ -36,6 +37,7 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_DW_DB=${POSTGRES_DW_DB}
       - POSTGRES_CONTAINER_NAME=${POSTGRES_CONTAINER_NAME}
       - POSTGRES_PORT=${POSTGRES_PORT}
       - SPARK_MASTER_HOST_NAME=${SPARK_MASTER_HOST_NAME}
