--- a/docker/docker-compose-postgres.yml
+++ b/docker/docker-compose-postgres.yml
@@ -12,6 +12,7 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_DB=${POSTGRES_DB}
+      # - POSTGRES_DB=${POSTGRES_DW_DB}
       - PGDATA=/var/lib/postgresql/data/pgdata
     volumes:
       - ../sql:/sql
